medidas de tendência central

--- a/ensino_ludico.ipynb
+++ b/ensino_ludico.ipynb
@@ -567,16 +567,52 @@
     "tags": []
    },
    "source": [
-    "# Medidas de Dispersão"
+    "# Medidas de Tendencia Central"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3c3f57bf-71f1-4bb8-8435-3ba49f623fda",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def media(soma_X, quant_valores):\n",
+    "    resultado = soma_X / quant_valores\n",
+    "\n",
+    "    return resultado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "aa523f07-ed50-4bd8-80b3-a88efd83f30c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def percentil(percentagem, quant_valores):\n",
+    "    resultado = percentagem * quant_valores\n",
+    "    print(\"Porcentagem imprópria\")\n",
+    "    \n",
+    "    resultado = resultado / 100\n",
+    "    \n",
+    "    #Não seu como posso transformar a posição em uma liha da tabela\n",
+    "    \n",
+    "    return resultado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "374ea2a2-b846-4cfb-b870-b0f510c09663",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mediana (quant_valores):\n",
+    "    resultado = percentil(50, quant_valores)\n",
+    "\n",
+    "    return resultado"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -776,7 +812,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
